# kodama-vst

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
.sisyphus/plans/: 001-kodama-vst-project.md
dsp/: Cargo.toml  build-wasm.sh  build.rs  cbindgen.toml
dsp/src/: delay.rs  ffi.rs  lib.rs  wasm.rs
plugin/: CMakeLists.txt
plugin/include/Kodama/: PluginEditor.h  PluginProcessor.h  kodama_dsp.h
plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/public/worklet/: processor.js
ui/src/: App.vue  style.css
ui/src/components/: KnobControl.vue  WaveformDisplay.vue  WebAudioControls.vue
ui/src/composables/: useJuceParameter.ts  useRuntime.ts  useWaveform.ts
ui/src/runtime/: JuceRuntime.ts  WebRuntime.ts  types.ts
ui/src/worklet/: processor.js
